SERVER-79885: Oplog fetching getMore should only set null lastKnownCommittedOpTime for exhaust cursors